refactor: Profit 이름 변경